--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AngularJS",
+  "name": "angular-js-test",
   "private": true,
   "version": "0.0.0",
   "description": "Test AngularJS",
@@ -11,5 +11,10 @@
   },
   "scripts": {
     "start": "http-server -a localhost -p 8000 -c-1 ./app"
+  },
+  "devDependencies": {
+    "http-server": "0.11.1",
+    "eslint": "^6.1.0",
+    "prettier": "^1.18.2"
   }
 }
